HVAC Backup 2/objects/BOM_Item__c.object
<CustomObject>
    <fields>
        <fullName>BOM__c</fullName>
        <label>BOM</label>
        <referenceTo>BOM__c</referenceTo>
        <relationshipLabel>BOM Items</relationshipLabel>
        <relationshipName>BOM_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Material_Group__c</fullName>
        <label>Material Group</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part_Code_Text__c</fullName>
        <label>Part Code Text</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part_Code__c</fullName>
        <formula>Part__r.ProductCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Part Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Part</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>BOM Items</relationshipLabel>
        <relationshipName>BOM_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ref_WRT_Img__c</fullName>
        <label>Ref WRT Img</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sort_String__c</fullName>
        <label>Sort String</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UOM__c</fullName>
        <description>unit of measure</description>
        <label>UOM</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_Price__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>BOM Item</label>
    <nameField>
        <label>BOM Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BOM Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>